AUTHORS: update for 1.12
Based on:
$ git shortlog -s -n

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,64 +9,132 @@ Previous maintainers:
 Other contributors:
   Ben Chan
   Nathan Williams
+  Carlo Lobrano
+  Daniele Palmas
+  Lubomir Rintel
   Torgny Johansson
+  Marco Bascetta
+  Riccardo Vangelisti
   Alexander Sack
   Guido Günther
   Eric Shienbrood
   Elly Jones
+  Eric Caruso
+  David McCullough
   Prathmesh Prabhu
   Thieu Le
   Thomas Tuttle
   Bjørn Mork
   Marius B. Kotsbak
-  Christian Persch
-  David McCullough
   Michael Biebl
+  Paul Bartell
+  Torsten Hilbrich
+  Alfonso Sánchez-Beato
+  Christian Persch
+  Sven Schwermer
+  Thomas Sailer
+  Bob Ham
   Colin Walters
   Franko Fang
+  Jakub Sitnicki
   Jason Glasgow
   Jeroen Elebaut
+  Matthew Starr
+  Reinhard Speyerer
+  Yunlian Jiang
   Ori Inbar
   David Rochberg
   Jiří Klimeš
+  Krzysztof Drobinski
   Martyn Russell
+  Thomas Haller
+  Tomas Jura
+  Colin Helliwell
   Graham Inggs
+  Javier Viguera
   Lionel Landwerlin
+  Maksim Salau
   Martin Pitt
+  Matthew Stanger
+  Maxim Anisimov
+  Nick Stevens
   Norbert Frese
+  Piotr Drąg
   Thomas Bechtold
   Yegor Yefremov
-  Yunlian Jiang
   Adrian Bunk
+  Alexander Couzens
   Amit Mendapara
   Andrew Bird
   Anton Blanchard
   Arnd Hannemann
+  Arto Jantunen
   Arun Raghavan
+  Baruch Siach
+  Beniamino Galvani
+  Brian Norris
+  Brian, Sam
   Bryan Duff
+  Claude Paroz
   David (Pololu)
   David Castellanos
+  David Herrmann
   David Härdeman
   Dmitry Ivanyushin
+  Enrico Mioso
   Eugene Crosser
   Evan Nemerson
+  Fabrice Bellet
   Fangxiaozhi (Franko)
+  Felix Janda
   Gerald Richter
+  Greg Suarez
+  Iain Lane
+  Jason Simmons
   Jens Seidel
+  Johny Mattsson
   Julian Oes
   Jun Woo Lee
+  Khem Raj
+  Krzysztof Kotlenga
+  Lech Perczak
+  LiuQiFeng
+  Luis A. Lozano
   M. I. Spozta
+  Marc Murphy
   Mario Blättermann
+  Mario Limonciello
+  Mark-Jablonsky
+  Michael Farrell
   Michał Sroczyński
+  Milo Casagrande
+  Mohammed Sadiq
+  Moo
   Nathan J. Williams
   Noel J. Bergman
+  Oskar Enoksson
+  Piotr Figiel
   Quentin.Li
+  Roshan Pius
+  Sam Spilsbury
+  Sławomir Bocheński
+  Tabor Kelly
   Thomas Grenman
+  Thomas Voß
+  Ting-Yuan Huang
   Tom Bechtold
   Tom Goetz
   Tore Anderson
+  Tyler
+  Ulrich Ölmann
+  Valentin Blot
+  Ville Skyttä
   Vincent Untz
   Vitaly Gimly
   Yuri Chornoivan
+  Amol Lad
   kuonirat
-  Matthew Stanger
+  poma
+  scootergrisen
+  wi24rd
+  yparitcher
