ublox: fully ignore GPS devices with plugin-installed rules
Instead of setting up the ID_MM_TTY_BLACKLIST tag used in 'legacy'
filter mode, tag all known u-blox GPS devices with the broader
ID_MM_DEVICE_IGNORE tag that applies under all filter modes.

Also, make this rules be installed by the plugin itself, because at
the end, it is the u-blox plugin the one attempting to probe all
devices with vid 0x1546.

--- a/NEWS
+++ b/NEWS
@@ -118,6 +118,7 @@ The most important features and changes in this release are the following:
    ** fibocom: added support for QMI based devices like the FM150.
    ** ublox: ignore error when disconnecting last LTE bearer.
    ** ublox: implement support to enable and detect +UUDTMF URCs.
+   ** ublox: added blacklist rules for GPS modules in the plugin itself.
    ** sierra: implement manual and automatic CDMA activation.
    ** novatel: implement manual and automatic CDMA activation.
 
