NEWS: update for 1.14.0

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,130 @@
 
+ModemManager 1.14.0
+-------------------------------------------
+This is a new stable release of ModemManager.
+
+The following notes are directed to package maintainers:
+
+ * This version requires:
+   ** GLib/GObject/GIO >= 2.48.0
+   ** libmbim >= 1.24.0 (for the optional MBIM support)
+   ** libqmi >= 1.26.0 (for the optional QMI support)
+
+ * Build updated with several improvements:
+   ** The build has been updated to use by default all warnings enabled by
+      AX_COMPILER_FLAGS(), and therefore when building the release from a git
+      checkout, autoconf-archive >= 2017.03.21 is now required. This new build
+      dependency isn't required when building from the release tarball.
+   ** Also when building from a git checkout, beware because by default
+      --enable-compile-warnings=error is enabled, which implies -Werror. If
+      you'd like to build from git and avoid -Werror, you should explicitly use
+      --enable-compile-warnings=yes (to keep the warnings but without being
+      errors), --enable-compile-warnings=no (to disable all the extra warnings
+      enabled by default) or --disable-Werror (to unconditionally make all
+      compiler warnings non-fatal).
+
+The only updates in the public API are the following:
+
+ * Modem interface:
+   ** Added support for AT-based and/or QMI-based 5G devices, which will report
+      the new MM_MODEM_CAPABILITY_5GNR capability.
+   ** Deprecated the MM_MODEM_CAPABILITY_LTE_ADVANCED capability, as it was
+      never used in any implementation.
+
+ * Bearer interface:
+   ** Added additional 'attempts', 'failed-attempts', 'total-rx-bytes',
+      'total-tx-bytes' and 'total-duration' values in the 'Stats' property
+      exposed by the Bearer objects.
+
+The most important features and changes in this release are the following:
+
+ * The daemon switched to 'STRICT' filter mode by default. The old 'DEFAULT'
+   mode is renamed to 'LEGACY' and is considered now deprecated. Under the
+   'STRICT' filter mode, the TTY blacklist and greylist are ignored, and the
+   port probing mechanism uses its own heuristics to guess whether a given TTY
+   is owned by a modem or not.
+
+ * Updated daemon logging so that we always prefix the messages with a string
+   identifying which modem the log refers to, making it easy to grep logs for
+   one specific device if the system has more than one.
+
+ * Updated the probing logic to make sure we don't attempt a re-probe when the
+   device is gone.
+
+ * Probing logic now allows new ports detected up to 1500ms since last port
+   added, useful on OpenWrt setups where ports are notified one by one via
+   hotplug events.
+
+ * AT:
+   ** Moved the charset definition logic to the initialization phase instead of
+      the enabling phase, because the feature support checks may already require
+      string processing based on the current charset.
+   ** Updated manual registration operation to attempt using current charset
+      (e.g. UCS2) if ASCII fails.
+
+ * QMI:
+   ** Devices using the LOC service for GNSS will now also setup the list of
+      required NMEA traces before starting the engine.
+   ** Implemented 3GPP USSD support using the Voice service.
+   ** Update carrier code if registration changes from one roaming operator to
+      another.
+   ** Explicitly disable autoconnect during modem enabling phase, because it
+      interferes with our connection management logic.
+   ** Fallback to raw-ip if WDA Get Data Format requests arguments, as in most
+      new 5G devices.
+   ** Updated to always use the asynchronous close() operation.
+   ** Handle disconnection indications during connection attempts.
+
+ * MBIM:
+   ** Update carrier code if registration changes from one roaming operator to
+      another.
+   ** Implement reset in Intel-based devices.
+   ** Avoid LTE attach config/status if unsupported.
+   ** Updated to make sure all allocated QMI CIDs are released during shutdown.
+
+ * SIM interface:
+   ** Don't allow sending PIN/PUK if not required.
+
+ * 3GPP interface:
+   ** Fixed manual re-registration to the same operator.
+
+ * CDMA interface:
+   ** Don't allow multiple concurrent activation attempts.
+   ** Disallow empty carrier code in automatic activation.
+
+ * Bearer interface:
+   ** Updated to avoid connection checks or stats updates while disconnecting.
+
+ * libmm-glib:
+   ** New 'mm_location_gps_nmea_get_traces()' method to retrieve a NULL
+      terminated array of strings with all cached NMEA traces.
+   ** Deprecated the 'mm_location_gps_nmea_build_full()' method.
+
+ * mmcli:
+   ** Added a new 'any' lookup keyword for the --modem and --sim options, useful
+      when the system is only expected to have one single device.
+
+ * Plugins:
+   ** broadmobi: new plugin, right now just with port type hints for the BM818.
+   ** foxconn: new plugin to support the T77W968 (both with and without eSIM).
+   ** dell,dw5821e: added support for the DW5821e with eSIM variant.
+   ** huawei: don't delay reporting network initiated disconnects.
+   ** huawei: try to read port type hints from interface descriptions.
+   ** huawei: avoid using the QCDM port during a voice call.
+   ** cinterion: skip sim ready check for modules that don't support it.
+   ** cinterion: implemented radio/band handling for LTE modems.
+   ** cinterion: added Signal interface support bsaed on AT^SMONI.
+   ** quectel: updated to detect SIM hot swap via +QUSIM URCs.
+   ** fibocom: added support for QMI based devices like the FM150.
+   ** ublox: ignore error when disconnecting last LTE bearer.
+   ** ublox: implement support to enable and detect +UUDTMF URCs.
+   ** sierra: implement manual and automatic CDMA activation.
+   ** novatel: implement manual and automatic CDMA activation.
+
+All the features and fixes which were backported to 1.12.x releases are also
+present in ModemManager 1.14.0.
+
+
 ModemManager 1.12.0
 -------------------------------------------
 This is a new stable release of ModemManager.
