api,modem: new 'SetPrimarySimSlot' method
This new method allows changing the SIM slot considered as primary,
when the modem supports multiple SIM slots.

The generic handling of this method will make sure that the modem
object and all its SIM objects are re-probed from scratch as soon as a
successful SIM slot switch happens.

Implementations may report MM_CORE_ERROR_EXISTS when the switch
doesn't need to happen (e.g. if the requested SIM slot is already the
active one).

--- a/docs/man/mmcli.1
+++ b/docs/man/mmcli.1
@@ -281,6 +281,12 @@ MMModemBand documentation.
 An example would be: 'egsm|dcs|pcs|g850' to select all the GSM
 frequency bands.
 .TP
+.B \-\-set\-primary\-sim\-slot=[SLOT]
+Request to switch the primary SIM slot.
+
+The given \fBSLOT\fR must be a valid slot number in the [1,N] range, where
+N is the amount of SIM slots available in the system.
+.TP
 .B \-\-inhibit
 Inhibit the specific modem from being used by ModemManager. This method
 is completely equivalent to \fB\-\-inhibit\-device\fR, with the only
