--- a/po/fr.po
+++ b/po/fr.po
@@ -7,8 +7,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ModemManager master\n"
-"Report-Msgid-Bugs-To: modemmanager-devel@lists.freedesktop.org\n"
-"POT-Creation-Date: 2020-04-08 16:23+0200\n"
+"Report-Msgid-Bugs-To: https://gitlab.freedesktop.org/mobile-broadband/"
+"ModemManager/issues\n"
+"POT-Creation-Date: 2020-09-18 10:30+0200\n"
 "PO-Revision-Date: 2018-08-18 16:17+0200\n"
 "Last-Translator: Claude Paroz <claude@2xlibre.net>\n"
 "Language-Team: French <gnomefr@traduc.org>\n"
