--- a/po/sv.po
+++ b/po/sv.po
@@ -1,23 +1,24 @@
 # Swedish translation for ModemManager.
-# Copyright (C) 2017 ModemManager's COPYRIGHT HOLDER
+# Copyright (C) 2017, 2020 ModemManager's COPYRIGHT HOLDER
 # This file is distributed under the same license as the ModemManager package.
 # Josef Andersson <l10nl18nsweja@gmail.com>, 2017.
+# Anders Jonsson <anders.jonsson@norsjovallen.se>, 2020.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: ModemManager master\n"
 "Report-Msgid-Bugs-To: https://gitlab.freedesktop.org/mobile-broadband/"
 "ModemManager/issues\n"
-"POT-Creation-Date: 2020-09-18 10:30+0200\n"
-"PO-Revision-Date: 2017-12-04 20:28+0100\n"
-"Last-Translator: Josef Andersson <l10nl18nsweja@gmail.com>\n"
+"POT-Creation-Date: 2020-09-18 15:29+0000\n"
+"PO-Revision-Date: 2020-09-18 23:56+0200\n"
+"Last-Translator: Anders Jonsson <anders.jonsson@norsjovallen.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.4\n"
+"X-Generator: Poedit 2.4.1\n"
 
 #: data/org.freedesktop.ModemManager1.policy.in.in:13
 msgid "Control the Modem Manager daemon"
@@ -70,14 +71,11 @@ msgstr "En systempolicy förhindrar röstsamtal."
 
 #: data/org.freedesktop.ModemManager1.policy.in.in:58
 msgid "Query network time and timezone information"
-msgstr ""
+msgstr "Fråga efter nätverkstid och tidzonsinformation"
 
 #: data/org.freedesktop.ModemManager1.policy.in.in:59
-#, fuzzy
 msgid "System policy prevents querying network time information."
-msgstr ""
-"En systempolicy förhindrar frågande och nyttjande av nätverksinformation och "
-"tjänster."
+msgstr "En systempolicy förhindrar frågande av nätverkstidsinformation."
 
 #: data/org.freedesktop.ModemManager1.policy.in.in:67
 msgid "Enable and view geographic location and positioning information"
@@ -92,7 +90,7 @@ msgstr ""
 
 #: data/org.freedesktop.ModemManager1.policy.in.in:76
 msgid "Query and utilize network information and services"
-msgstr "Fråga och nyttja nätverksinformation och tjänster"
+msgstr "Fråga efter och nyttja nätverksinformation och tjänster"
 
 #: data/org.freedesktop.ModemManager1.policy.in.in:77
 msgid ""
@@ -104,7 +102,7 @@ msgstr ""
 
 #: data/org.freedesktop.ModemManager1.policy.in.in:85
 msgid "Query and manage firmware on a mobile broadband device"
-msgstr "Fråga och hantera fast programvara för en mobil bredbandsenhet"
+msgstr "Fråga efter och hantera fast programvara för en mobil bredbandsenhet"
 
 #: data/org.freedesktop.ModemManager1.policy.in.in:86
 msgid "System policy prevents querying or managing this device's firmware."
